@@ -1,214 +1,104 @@
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
-
 package at.redeye.FrameWork.base;
 
-import at.redeye.FrameWork.base.bindtypes.DBStrukt;
-import at.redeye.FrameWork.base.dll_cache.DLLExtractor;
-import at.redeye.FrameWork.Plugin.Plugin;
-import at.redeye.FrameWork.utilities.calendar.Holidays;
-import java.util.List;
-import java.util.Locale;
+import at.redeye.FrameWork.base.prm.bindtypes.DBConfig;
+import at.redeye.FrameWork.base.prm.impl.ConfigDefinitions;
+import at.redeye.FrameWork.base.translation.MLHelper;
+import at.redeye.FrameWork.utilities.Storage;
 
-/**
- *
- * @author martin
- */
-public abstract class Root {
+import java.nio.file.Path;
+import java.util.Collection;
 
-    String app_name;
-    String web_start_url;
-    String app_title;
+public class Root {
+    private static Root static_root;
+    private final String app_name;
+    private final Setup setup;
+    private final Path storage;
+    private final Dialogs dialogs;
+    private final MLHelper ml_helper;
 
     /**
-     * language most of the aplication is programmed in
-     * can be set in each dialog but if not set
+     * Language most of the aplication is programmed in.
+     * Can be set in each dialog, but if not set
      * here you can define the default
-     *
+     * <p>
      * This is set to "en" by default.
      */
-    String base_language;
+    private String base_language;
 
     /**
-     * fallback language if the target language is not
+     * Fallback language if the target language is not
      * available.
      * Eg: Dialogs are programmed in german, transalations
-     * are available in english too. But on a french PC
-     * we have no translatios. So whout should we do now?
+     * are available in english too. But on a French PC
+     * we have no translatios. So what should we do now?
      * Here you can define the default language which can be
-     * diferrent from the language the dialog was translated
+     * different from the language the dialog was translated
      * for.
-     *
+     * <p>
      * This is set to "en" by default
      */
-    String default_language;
+    private String default_language;
 
     /**
      * path to transaltion files as resource view
      * eg: /at/redeye/Zeiterfassung/resources/translations
      */
-    String language_resource_path;
+    private String language_resource_path;
 
-    /**
-     * language used in messages, can differ from
-     * Locale.getDefault()
-     */
-    String display_language;
+    private String[] startupArgs;
 
-    static Root static_root;
-
-    public Root( String app_name )
-    {
+    public Root(String app_name) {
         this.app_name = app_name;
         static_root = this;
+        setup = new Setup(Path.of(System.getProperty("user.home")), app_name);
+        storage = Storage.getEphemeralStorage(this.app_name);
+        dialogs = new Dialogs(this);
+        ml_helper = new MLHelper(this);
     }
 
-    public Root( String app_name, String app_title )
-    {
-        this.app_name = app_name;
-        this.app_title = app_title;
-        static_root = this;
+    public Setup getSetup() {
+        return setup;
     }
 
-    public abstract Setup getSetup();
-
-    public abstract boolean saveSetup();
-
-    public abstract void setDBConnection( DBConnection con );
-    public abstract DBConnection getDBConnection();
-    public abstract boolean loadDBConnectionFromSetup();
-
-    public void informWindowOpened( BaseDialogBase dlg ) {}
-    public void informWindowClosed( BaseDialogBase dlg ) {}
-    public void closeAllWindowsExceptThisOne( BaseDialogBase dlg ) {}
-    public void closeAllWindowsNoAppExit() {}
-
-    public void appExit() {}
-
-    public void setAktivUser( DBStrukt pb )
-    {
-
-    }
-    /*
-    public int getUserPermissionLevel()
-    {
-        return UserManagementInterface.UM_PERMISSIONLEVEL_ADMIN;
-    }*/
-
-    public String getUserName()
-    {
-        return "";
+    public void saveSetup() {
+        ml_helper.saveMissingProps();
+        setup.saveProps();
     }
 
-    public String getLogin()
-    {
-        return "";
-    }
-/*
-    public DBBindtypeManager getBindtypeManager()
-    {
-        return null;
+    public Dialogs getDialogs() {
+        return dialogs;
     }
 
-    public DBManager getDBManager()
-    {
-        return null;
-    }
-  */
-    public int getUserId()
-    {
-        return 0;
+    void appExit() {
+        saveSetup();
+        System.exit(0);
     }
 
-    public String getAppName()
-    {
+    public String getAppName() {
         return app_name;
-    }
-
-    public void setWebStartUlr(String url)
-    {
-        web_start_url = url;
-    }
-
-    public String getWebStartUrl()
-    {
-        return web_start_url;
-    }
-
-    public String getAppTitle()
-    {
-        return app_title;
-    }
-
-    public void waitUntilNetworkIsReady()
-    {
-
-    }
-
-    public void noProxyFor(String address)
-    {
-
-    }
-
-    public void addDllExtractorToCache( DLLExtractor extractor )
-    {
-
-    }
-
-    public void updateDllCache()
-    {
-
-    }
-
-    public void registerPlugin( Plugin plugin )
-    {
-
-    }
-
-    public List<Plugin> getRegisteredPlugins()
-    {
-        return null;
-    }
-
-
-    public Plugin getPlugin(String name)
-    {
-        return null;
-    }
-
-    public Holidays getHolidays() {
-        return null;
-    }
-
-    public void setHolidays( Holidays  holidays )
-    {
-
     }
 
     /**
      * language most of the aplication is programmed in
-     * can be set in each dialog but if not set
+     * can be set in each dialog, but if not set
      * here you can define the default
-     *
+     * <p>
      * This is set to "en" by default.
      */
-    public void setBaseLanguage( String language )
-    {
+    public void setBaseLanguage(String language) {
         base_language = language;
     }
 
     /**
-     * fallback language if the target language is not
+     * Fallback language if the target language is not
      * available.
      * Eg: Dialogs are programmed in german, transalations
-     * are available in english too. But on a french PC
-     * we have no translatios. So whout should we do now?
+     * are available in english too. But on a French PC
+     * we have no translatios. So what should we do now?
      * Here you can define the default language which can be
-     * diferrent from the language the dialog was translated
+     * different from the language the dialog was translated
      * for.
-     *
+     * <p>
      * This is set to "en" by default
      */
     public void setDefaultLanguage( String language )
@@ -217,15 +107,15 @@ public abstract class Root {
     }
 
     /**
-     * fallback language if the target language is not
+     * Fallback language if the target language is not
      * available.
      * Eg: Dialogs are programmed in german, transalations
-     * are available in english too. But on a french PC
-     * we have no translatios. So whout should we do now?
+     * are available in english too. But on a French PC
+     * we have no translatios. So what should we do now?
      * Here you can define the default language which can be
-     * diferrent from the language the dialog was translated
+     * different from the language the dialog was translated
      * for.
-     *
+     * <p>
      * This is set to "en" by default
      */
     public String getDefaultLanguage()
@@ -238,9 +128,9 @@ public abstract class Root {
 
     /**
      * language most of the aplication is programmed in
-     * can be set in each dialog but if not set
+     * can be set in each dialog, but if not set
      * here you can define the default
-     *
+     * <p>
      * This is set to "en" by default.
      */
     public String getBaseLanguage()
@@ -258,34 +148,20 @@ public abstract class Root {
     public void setLanguageTranslationResourcePath( String path )
     {
         language_resource_path = path;
+        ml_helper.autoLoadCurrentLocale();
     }
 
     /**
      * @return language that should be used for translations
-     * can be Locale.getDefault() or something userdefined
+     * If the Display Language is not configured, Default Language is returned.
      */
     public String getDisplayLanguage()
     {
-        if (display_language == null)
-        {
-            Setup setup = getSetup();
-
-            display_language = Locale.getDefault().toString();
-
-            if (setup == null) {
-                return display_language;
-            }
-
-            String lang = setup.getLocalConfig(BaseAppConfigDefinitions.DisplayLanguage);
-
-            if (lang != null && lang.trim().isEmpty()) {
-                return display_language;
-            }
-
-            display_language = lang;
+        String lang = BaseAppConfigDefinitions.DisplayLanguage.getConfigValue();
+        if (lang == null || lang.isBlank()) {
+            return getDefaultLanguage();
         }
-
-        return display_language;
+        return lang;
     }
 
     /**
@@ -293,54 +169,63 @@ public abstract class Root {
      * eg: /at/redeye/Zeiterfassung/resources/translations
      * or null if not set
      */
-    public String getLanguageTranslationResourcePath()
-    {
+    public String getLanguageTranslationResourcePath() {
         return language_resource_path;
     }
 
-    public abstract String MlM( String message );
-
-    /**
-     * load a MlM file for a spacific class
-     * @param obj
-     * @param impl_locale the locale the class was originaly implemented
-     * eg "de" for german
-     */
-    public abstract void loadMlM4Class( Object obj, String impl_locale );
-
-    /**
-     * load a MlM file for a spacific class
-     * as implementation language the value of base_language is used
-     * @param obj
-     */
-    public abstract void loadMlM4Class( Object obj );
-
-    /**
-     * load a MlM file for a spacific class
-     * @param obj
-     * @param impl_locale the locale the class was originaly implemented
-     * eg "de" for german
-     */
-    public abstract void loadMlM4ClassName(String name, String string);
-
-    /**
-     * load a MlM file for a spacific class
-     * as implementation language the value of base_language is used
-     * @param obj
-     */
-    public abstract void loadMlM4ClassName(String name);
-
-    /**
-     * only use this in case of emergency
-     * @return the last instace of the root class
-     */
-    public static Root getLastRoot()
-    {
-        return static_root;
+    public String MlM(String message) {
+        return ml_helper.MlM(message);
     }
 
     /**
-     * @return the number of currently open windows
+     * load a MlM file for a spacific class
+     *
+     * @param impl_locale the locale the class was originaly implemented
+     *                    eg "de" for german
      */
-    public abstract int countOpenWindows();
+    public void loadMlM4Class(Object obj, String impl_locale) {
+        ml_helper.autoLoadFile4Class(obj, getDisplayLanguage(), impl_locale);
+    }
+
+    /**
+     * load a MlM file for a spacific class
+     */
+    public void loadMlM4ClassName(String name, String impl_locale) {
+        ml_helper.autoLoadFile4ClassName(name, getDisplayLanguage(), impl_locale);
+
+    }
+
+    /**
+     * only use this in case of emergency
+     *
+     * @return the last instace of the root class
+     */
+    public static Root getLastRoot() {
+        return static_root;
+    }
+
+    public Path getStorage() {
+        return storage;
+    }
+
+    public void setStartupArgs(String[] args) {
+        startupArgs = args;
+    }
+
+    public String[] getStartupArgs() {
+        return startupArgs;
+    }
+
+    public Collection<DBConfig> loadConfig() {
+        Collection<DBConfig> configs = ConfigDefinitions.entries.values();
+
+        for (DBConfig c : configs) {
+            String val = setup.getConfig(c.getConfigName(), c.getConfigValue());
+            c.descr.loadFromCopy(MlM(c.descr.getValue()));
+            c.setConfigValue(val);
+        }
+
+        return configs;
+    }
+
 }
