@@ -3,15 +3,18 @@ package net.sourceforge.MSGViewer;
 import at.redeye.FrameWork.base.BaseModuleLauncher;
 import at.redeye.FrameWork.base.Setup;
 import com.auxilii.msgparser.Message;
-import net.sourceforge.MSGViewer.factory.MessageParserFactory;
+import net.sourceforge.MSGViewer.factory.MessageParser;
+import net.sourceforge.MSGViewer.factory.MessageSaver;
 import org.apache.logging.log4j.Level;
 import org.apache.logging.log4j.Logger;
 
 import javax.swing.*;
 import java.awt.*;
 import java.io.File;
-import java.nio.file.Paths;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Arrays;
+import java.util.List;
 
 public abstract class CLIFileConverter {
 
@@ -20,17 +23,14 @@ public abstract class CLIFileConverter {
 	private final ModuleLauncher module_launcher;
 	private final String sourceType;
 	private final String targetType;
-	private boolean convertToTemp = false;
-	private boolean openAfterConvert = false;
+	private boolean convertToTemp;
+	private boolean openAfterConvert;
 
 	/**
-	 * @param module_launcher
-	 * @param sourceType
-	 *            the source file type (i.e. ending) without a leading dot. E.g.
-	 *            "msg"
-	 * @param targetType
-	 *            the target file type (i.e. ending) without a leading dot. E.g.
-	 *            "mbox"
+	 * @param sourceType the source file type (i.e., ending) without a leading dot. E.g.
+	 *                   "msg"
+	 * @param targetType the target file type (i.e., ending) without a leading dot. E.g.
+	 *                   "mbox"
 	 */
 	CLIFileConverter(ModuleLauncher module_launcher, String sourceType,
 					 String targetType) {
@@ -66,17 +66,12 @@ public abstract class CLIFileConverter {
 	}
 
 	void work() {
-		boolean converted = false;
-		MessageParserFactory factory = new MessageParserFactory();
+		List<String> processableFiles = Arrays.stream(module_launcher.args)
+				.filter(sourcePath -> sourcePath.toLowerCase().endsWith(String.format(".%s", sourceType)))
+				.toList();
+		processableFiles.forEach(this::processFile);
 
-		for (String sourceFilePath : module_launcher.args) {
-			if (sourceFilePath.toLowerCase().endsWith(String.format(".%s", sourceType))) {
-				converted = true;
-				processFile(factory, sourceFilePath);
-			}
-		}
-
-		if (!converted) {
+		if (processableFiles.isEmpty()) {
 			usage();
 		}
 	}
@@ -86,21 +81,22 @@ public abstract class CLIFileConverter {
 				"usage: %s FILE FILE ....", getCLIParameter())));
 	}
 
-	private void processFile(MessageParserFactory factory, String sourceFilePath) {
-		File sourceFile = new File(sourceFilePath).getAbsoluteFile();
-		String baseFileName = sourceFile.getName();
-		int idx = baseFileName.lastIndexOf('.');
-		baseFileName = baseFileName.substring(0, idx);
-		try {
-			File targetFile = convertToTemp
-					? File.createTempFile(baseFileName, String.format(".%s", targetType))
-					: Paths.get(sourceFile.getParent(), String.format("%s.%s", baseFileName, targetType)).toFile();
+	private void processFile(String sourceFilePath) {
+        Path sourceFile = Path.of(sourceFilePath).toAbsolutePath();
+        String fileName = sourceFile.getFileName().toString();
+        int idx = fileName.lastIndexOf('.');
+        String baseFileName = fileName.substring(0, idx);
+        try {
+			Path targetFile = convertToTemp
+					? Files.createTempFile(baseFileName, String.format(".%s", targetType))
+					: sourceFile.getParent().resolve(String.format("%s.%s", baseFileName, targetType));
 
-			LOGGER.info("conversion source file: " + sourceFile);
-			Message msg = factory.parseMessage(sourceFile);
+			LOGGER.info("conversion source file: {}", sourceFile);
+			Message msg = new MessageParser(sourceFile).parseMessage();
 
-			LOGGER.info("conversion target file: " + targetFile);
-			factory.saveMessage(msg, targetFile);
+			LOGGER.info("conversion target file: {}", targetFile);
+			AttachmentRepository attachmentRepository = new AttachmentRepository(module_launcher.root);
+			new MessageSaver(attachmentRepository, msg).saveMessage(targetFile);
 
 			if (openAfterConvert) {
 				openFile(targetFile);
@@ -110,26 +106,26 @@ public abstract class CLIFileConverter {
 		}
 	}
 
-	private void openFile(File targetFile) {
-		try {
-			Desktop.getDesktop().open(targetFile);
-		} catch (Exception e) {
-			LOGGER.warn("failed to open default application with Desktop.open(), trying system dependent command.");
-			String[] cmdarray = null;
+    private static void openFile(Path targetFile) {
+        try {
+            Desktop.getDesktop().open(targetFile.toFile());
+        } catch (Exception e) {
+            LOGGER.warn("failed to open default application with Desktop.open(), trying system dependent command.");
+            String[] cmdarray = null;
 
-			if (Setup.is_linux_system()) {
-				cmdarray = new String[2];
-				cmdarray[0] = "xdg-open";
-				cmdarray[1] = targetFile.getAbsolutePath();
+            if (Setup.is_linux_system()) {
+                cmdarray = new String[2];
+                cmdarray[0] = "xdg-open";
+                cmdarray[1] = targetFile.toAbsolutePath().toString();
 			} else if (Setup.is_mac_system()) {
 				cmdarray = new String[2];
-				cmdarray[0] = "open";
-				cmdarray[1] = targetFile.getAbsolutePath();
+                cmdarray[0] = "open";
+                cmdarray[1] = targetFile.toAbsolutePath().toString();
 			} else if (Setup.is_win_system()) {
 				cmdarray = new String[3];
 				cmdarray[0] = "cmd";
-				cmdarray[1] = "/c";
-				cmdarray[2] = targetFile.getAbsolutePath();
+                cmdarray[1] = "/c";
+                cmdarray[2] = targetFile.toAbsolutePath().toString();
 			}
 			if (cmdarray != null) {
 				try {
@@ -137,7 +133,7 @@ public abstract class CLIFileConverter {
 				} catch (Exception e1) {
 					String message = String.format("Unable to open converted file.\nCould not execute command %s",
 							Arrays.toString(cmdarray));
-					LOGGER.error(message.replaceAll("\n", " "));
+					LOGGER.error(message.replace("\n", " "));
 					JOptionPane.showMessageDialog(null, message,
 							"Error opening converted file",
 							JOptionPane.ERROR_MESSAGE);
