@@ -1,6 +1,7 @@
 package net.sourceforge.MSGViewer.factory.msg;
 
 import com.auxilii.msgparser.Message;
+import com.auxilii.msgparser.Ptyp;
 import com.auxilii.msgparser.RecipientEntry;
 import com.auxilii.msgparser.attachment.Attachment;
 import com.auxilii.msgparser.attachment.FileAttachment;
@@ -18,96 +19,34 @@ import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.auxilii.msgparser.Pid.*;
+import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 
 public class MsgContainer {
-    public static final String PROPERTY_STREAM = "__properties_version1.0";
-    public static final String NAMED_PROPERTY = "__nameid_version1.0";
+    private static final String PROPERTY_STREAM = "__properties_version1.0";
+    private static final String NAMED_PROPERTY = "__nameid_version1.0";
 
-    private final List<PropType> properties = new ArrayList<>();
-    private final List<SubstGEntry> substg_streams = new ArrayList<>();
+    private final Collection<PropType> properties = new ArrayList<>();
+    private final Collection<SubStorageEntry> substg_streams = new ArrayList<>();
 
     private final List<RecipientEntry> recipients = new ArrayList<>();
     private final List<Attachment> attachments = new ArrayList<>();
+    private final Message msg;
 
     MsgContainer(Message msg) {
-        if (msg.getSubject() != null) {
-            addVarEntry(new SubjectEntry(msg.getSubject()));
-        }
-
-        addVarEntry(new MessageClassEntry());
-
-        if (isNotEmpty(msg.getBodyText())) {
-            addVarEntry(new BodyTextEntry(msg.getBodyText()));
-        }
-
-        if (msg.getCompressedRTF() != null) {
-            addVarEntry(new CompressedRTFEntry(msg.getCompressedRTF()));
-        }
-
-        if (msg.getHeaders() != null && !msg.getHeaders().isEmpty()) {
-            addVarEntry(new HeadersEntry(msg.getHeaders()));
-        }
-
-        // PidTagStoreSupportMask data is encoded in unicode
-        addProperty(new PropPtypInteger32(PidTagStoreSupportMask, 0x00040000));
-
-        // PidTagCreationTime
-        addProperty(new PropPtypTime(PidTagCreationTime, System.currentTimeMillis()));
-
-        // PidTagLastModificationTime
-        addProperty(new PropPtypTime(PidTagLastModificationTime, System.currentTimeMillis()));
-
-        // PidTagClientSubmitTime
-        if (msg.getDate() != null) {
-            addProperty(new PropPtypTime(PidTagClientSubmitTime, msg.getDate().getTime()));
-        }
-
-        if (msg.getFromName() != null && !msg.getFromName().isEmpty()) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagSenderName, msg.getFromName()));
-        }
-
-        if (msg.getFromEmail() != null && !msg.getFromEmail().isEmpty()) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagSenderEmailAddress, msg.getFromEmail()));
-        }
-
-        if (msg.getToEmail() != null) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagEmailAddress, msg.getToEmail()));
-        }
-
-        if (msg.getToName() != null) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayName, msg.getToName()));
-        }
-
-        if (msg.getMessageId() != null && !msg.getMessageId().isEmpty()) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagInternetMessageId, msg.getMessageId()));
-        }
-
-        if (msg.getDisplayTo() != null && !msg.getDisplayTo().isEmpty()) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayTo, msg.getDisplayTo()));
-        }
-
-        if (msg.getDisplayCc() != null && !msg.getDisplayCc().isEmpty()) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayCc, msg.getDisplayCc()));
-        }
-
-        if (msg.getDisplayBcc() != null && !msg.getDisplayBcc().isEmpty()) {
-            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayBcc, msg.getDisplayBcc()));
-        }
-
-        for (RecipientEntry rec_entry : msg.getRecipients()) {
-            addRecipient(rec_entry);
-        }
-
-        for (Attachment attachment : msg.getAttachments()) {
-            addAttachment(attachment);
-        }
+        this.msg = msg;
     }
 
+    /**
+     * Write header and properties of the message to the given filesystem.
+     * See [MS-OXMSG] §2.4 for details about the message structure.
+     *
+     * @param root the root of the filesystem.
+     */
     public void write(DirectoryEntry root) throws IOException {
+        parse();
         int headerSize = root.getParent() == null ? 32 : 24;
         int size = headerSize + properties.size() * 16;
         ByteBuffer bytes = ByteBuffer.allocate(size).order(ByteOrder.LITTLE_ENDIAN);
@@ -132,7 +71,7 @@ public class MsgContainer {
             prop.writePropertiesEntry(bytes);
         }
 
-        for (SubstGEntry entry : substg_streams) {
+        for (SubStorageEntry entry : substg_streams) {
             entry.createEntry(root);
         }
 
@@ -148,11 +87,94 @@ public class MsgContainer {
         createNamedPropertyEntry(root);
     }
 
+    private void parse() {
+        if (msg.getSubject() != null) {
+            addVarEntry(new SubjectEntry(msg.getSubject()));
+            addVarEntry(new StringUTF16SubstgEntry(PidTagNormalizedSubject, msg.getTopic()));
+            addVarEntry(new StringUTF16SubstgEntry(PidTagConversationTopic, msg.getTopic()));
+            addVarEntry(new StringUTF16SubstgEntry(PidTagSubjectPrefix, msg.getSubjectPrefix()));
+        }
+
+        addVarEntry(new MessageClassEntry());
+
+        if (isNotEmpty(msg.getBodyText())) {
+            addVarEntry(new BodyTextEntry(msg.getBodyText()));
+        }
+
+        if (msg.getBodyHtml() != null) {
+            addVarEntry(new BodyHtmlEntry(msg.getBodyHtml()));
+        }
+
+        if (msg.getCompressedRTF() != null) {
+            addVarEntry(new CompressedRTFEntry(msg.getCompressedRTF()));
+        }
+
+        if (msg.getHeaders() != null && !msg.getHeaders().isEmpty()) {
+            addVarEntry(new HeadersEntry(msg.getHeaders()));
+        }
+
+        // PidTagStoreSupportMask data is encoded in unicode
+        addProperty(new PropPtypInteger32(PidTagStoreSupportMask, 0x00040000));
+
+        addProperty(new PropPtypTime(PidTagCreationTime, System.currentTimeMillis()));
+
+        addProperty(new PropPtypTime(PidTagLastModificationTime, System.currentTimeMillis()));
+
+        if (msg.getDate() != null) {
+            addProperty(new PropPtypTime(PidTagClientSubmitTime, msg.getDate().toEpochSecond() * 1000));
+        }
+
+        if (isNotBlank(msg.getMessageId())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagInternetMessageId, msg.getMessageId()));
+        }
+
+        if (isNotBlank(msg.getFromName())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagSenderName, msg.getFromName()));
+            addVarEntry(new StringUTF16SubstgEntry(PidTagSentRepresentingName, msg.getFromName()));
+        }
+
+        if (isNotBlank(msg.getFromEmail())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagSenderEmailAddress, msg.getFromEmail()));
+            addVarEntry(new StringUTF16SubstgEntry(PidTagSentRepresentingEmailAddress, msg.getFromEmail()));
+        }
+
+        addVarEntry(new StringUTF16SubstgEntry(PidTagSenderAddressType, msg.getFromAddressType()));
+        addVarEntry(new StringUTF16SubstgEntry(PidTagSentRepresentingAddressType, msg.getFromAddressType()));
+
+        if (isNotBlank(msg.getToName())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayName, msg.getToName()));
+        }
+
+        if (isNotBlank(msg.getToEmail())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagEmailAddress, msg.getToEmail()));
+        }
+
+        if (isNotBlank(msg.getDisplayTo())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayTo, msg.getDisplayTo()));
+        }
+
+        if (isNotBlank(msg.getDisplayCc())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayCc, msg.getDisplayCc()));
+        }
+
+        if (isNotBlank(msg.getDisplayBcc())) {
+            addVarEntry(new StringUTF16SubstgEntry(PidTagDisplayBcc, msg.getDisplayBcc()));
+        }
+
+        for (RecipientEntry rec_entry : msg.getRecipients()) {
+            addRecipient(rec_entry);
+        }
+
+        for (Attachment attachment : msg.getAttachments()) {
+            addAttachment(attachment);
+        }
+    }
+
     private void addProperty(PropType prop) {
         properties.add(prop);
     }
 
-    private void addVarEntry(SubstGEntry entry) {
+    private void addVarEntry(SubStorageEntry entry) {
         addProperty(entry.getPropType());
         substg_streams.add(entry);
     }
@@ -194,20 +216,20 @@ public class MsgContainer {
     private static void writeRecipientEntry(DirectoryEntry root, RecipientEntry rec, int id) throws IOException {
         DirectoryEntry rec_dir = root.createDirectory(String.format("__recip_version1.0_#%08X", id));
 
-        List<? extends SubstGEntry> entries = Arrays.asList(
+        List<? extends SubStorageEntry> entries = Arrays.asList(
                 new StringUTF16SubstgEntry(PidTagDisplayName, rec.getName()),
                 new StringUTF16SubstgEntry(PidTagAddressType, "SMTP"),
                 new StringUTF16SubstgEntry(PidTagEmailAddress, rec.getEmail())
         );
 
-        for (SubstGEntry entry : entries) {
+        for (SubStorageEntry entry : entries) {
             entry.createEntry(rec_dir);
         }
 
-        List<PropType> props = new ArrayList<>();
+        Collection<PropType> props = new ArrayList<>();
         props.add(new PropPtypInteger32(PidTagRowid, id));
         props.add(new PropPtypInteger32(PidTagRecipientType, rec.getType().getValue()));
-        for (SubstGEntry entry : entries) {
+        for (SubStorageEntry entry : entries) {
             props.add(entry.getPropType());
         }
 
@@ -216,7 +238,7 @@ public class MsgContainer {
         createPropertyStreamEntry(bytes, rec_dir);
     }
 
-    private void writeAttachment(DirectoryEntry root, Attachment attachment, int id) throws IOException {
+    private static void writeAttachment(DirectoryEntry root, Attachment attachment, int id) throws IOException {
         DirectoryEntry att_dir = root.createDirectory(String.format("__attach_version1.0_#%08X", id));
         if (attachment instanceof FileAttachment) {
             writeFileAttachment((FileAttachment) attachment, att_dir);
@@ -227,21 +249,22 @@ public class MsgContainer {
     }
 
     private static void writeFileAttachment(FileAttachment attachment, DirectoryEntry att_dir) throws IOException {
-        List<? extends SubstGEntry> entries = Arrays.asList(
+        List<? extends SubStorageEntry> entries = Arrays.asList(
                 new BinaryEntry(PidTagAttachDataBinary, attachment.getData()),
                 new StringUTF16SubstgEntry(PidTagAttachExtension, attachment.getExtension()),
                 new StringUTF16SubstgEntry(PidTagAttachFilename, attachment.getFilename()),
                 new StringUTF16SubstgEntry(PidTagAttachLongFilename, attachment.getLongFilename()),
-                new StringUTF16SubstgEntry(PidTagAttachMimeTag, attachment.getMimeTag())
+                new StringUTF16SubstgEntry(PidTagAttachMimeTag, attachment.getMimeTag()),
+                new StringUTF16SubstgEntry(PidTagAttachContentId, attachment.getContentId())
         );
 
-        for (SubstGEntry entry : entries) {
+        for (SubStorageEntry entry : entries) {
             entry.createEntry(att_dir);
         }
 
         List<PropType> props = entries.stream()
-                .map(SubstGEntry::getPropType)
-                .collect(Collectors.toList());
+                .map(SubStorageEntry::getPropType)
+                .toList();
 
         ByteBuffer bytes = createPropertiesEntryContent(props);
 
@@ -249,22 +272,12 @@ public class MsgContainer {
     }
 
     private static void writeMsgAttachment(MsgAttachment attachment, DirectoryEntry att_dir) throws IOException {
-        List<? extends SubstGEntry> entries = Collections.emptyList();
-
-        for (SubstGEntry entry : entries) {
-            entry.createEntry(att_dir);
-        }
-
-        List<PropType> props = entries.stream()
-                .map(SubstGEntry::getPropType)
-                .collect(Collectors.toList());
-
-        ByteBuffer bytes = createPropertiesEntryContent(props);
+        ByteBuffer bytes = createPropertiesEntryContent(Collections.emptyList());
 
         createPropertyStreamEntry(bytes, att_dir);
 
-        DirectoryEntry msg_dir = att_dir.createDirectory("__substg1.0_3701000D");
-        writeMessage(attachment.getMessage(), msg_dir);
+        DirectoryEntry msg_dir = att_dir.createDirectory(Ptyp.SUBSTORAGE_PREFIX + "3701000D");
+        writeMessage(attachment.message(), msg_dir);
     }
 
     private static void writeMessage(Message message, DirectoryEntry msg_dir) throws IOException {
